# pa-lab2

./: CMakeLists.txt  README.md  bfs_par.cpp  bfs_par.h  bfs_seq.cpp  bfs_seq.h  filter.h  graph.cpp  graph.h  main.cpp  utils.h
